prevent overflow on x axis

--- a/static/public/styles/styles.css
+++ b/static/public/styles/styles.css
@@ -11,6 +11,8 @@ body {
   transition: background-color var(--color-scheme-transition-duration);
   background-color: var(--background-primary);
   color: var(--text-primary);
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 header,footer {
   background-color: var(--background-secondary);
